scalar_includedir=$(includedir)/qphix/scalar

nobase_scalar_include_HEADERS = \
	./dslash_scalar_complete_specialization_form.h \
	./dslash_scalar_complete_specialization.h \
./generated/dslash_achimbdpsi_minus_body_double_double_v1_s1_12 \
./generated/dslash_achimbdpsi_minus_body_double_double_v1_s1_18 \
./generated/dslash_achimbdpsi_minus_body_float_float_v1_s1_12 \
./generated/dslash_achimbdpsi_minus_body_float_float_v1_s1_18 \
./generated/dslash_achimbdpsi_plus_body_double_double_v1_s1_12 \
./generated/dslash_achimbdpsi_plus_body_double_double_v1_s1_18 \
./generated/dslash_achimbdpsi_plus_body_float_float_v1_s1_12 \
./generated/dslash_achimbdpsi_plus_body_float_float_v1_s1_18 \
./generated/dslash_face_pack_to_back_T_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_T_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_back_T_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_T_plus_float_float_v1_s1 \
./generated/dslash_face_pack_to_back_X_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_X_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_back_X_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_X_plus_float_float_v1_s1 \
./generated/dslash_face_pack_to_back_Y_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_Y_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_back_Y_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_Y_plus_float_float_v1_s1 \
./generated/dslash_face_pack_to_back_Z_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_Z_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_back_Z_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_back_Z_plus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_T_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_T_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_T_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_T_plus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_X_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_X_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_X_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_X_plus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_Y_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_Y_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_Y_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_Y_plus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_Z_minus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_Z_minus_float_float_v1_s1 \
./generated/dslash_face_pack_to_forw_Z_plus_double_double_v1_s1 \
./generated/dslash_face_pack_to_forw_Z_plus_float_float_v1_s1 \
./generated/dslash_face_unpack_from_back_T_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_T_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_T_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_T_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_back_T_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_T_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_T_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_T_plus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_back_X_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_X_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_X_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_X_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_back_X_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_X_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_X_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_X_plus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_18 \
./generated/dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_12 \
./generated/dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_18 \
./generated/dslash_minus_body_double_double_v1_s1_12 \
./generated/dslash_minus_body_double_double_v1_s1_18 \
./generated/dslash_minus_body_float_float_v1_s1_12 \
./generated/dslash_minus_body_float_float_v1_s1_18 \
./generated/dslash_plus_body_double_double_v1_s1_12 \
./generated/dslash_plus_body_double_double_v1_s1_18 \
./generated/dslash_plus_body_float_float_v1_s1_12 \
./generated/dslash_plus_body_float_float_v1_s1_18

if QPHIX_BUILD_CLOVER

nobase_scalar_include_HEADERS += \
./clov_dslash_scalar_complete_specialization_form.h \
./clov_dslash_scalar_complete_specialization.h \
./generated/clov_double_dslash_achimbdpsi_minus_body_double_double_v1_s1_12 \
./generated/clov_double_dslash_achimbdpsi_minus_body_double_double_v1_s1_18 \
./generated/clov_double_dslash_achimbdpsi_plus_body_double_double_v1_s1_12 \
./generated/clov_double_dslash_achimbdpsi_plus_body_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_T_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_T_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_T_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_T_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_X_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_X_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_X_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_X_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_18 \
./generated/clov_double_dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_12 \
./generated/clov_double_dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_18 \
./generated/clov_double_dslash_minus_body_double_double_v1_s1_12 \
./generated/clov_double_dslash_minus_body_double_double_v1_s1_18 \
./generated/clov_double_dslash_plus_body_double_double_v1_s1_12 \
./generated/clov_double_dslash_plus_body_double_double_v1_s1_18 \
./generated/clov_float_dslash_achimbdpsi_minus_body_float_float_v1_s1_12 \
./generated/clov_float_dslash_achimbdpsi_minus_body_float_float_v1_s1_18 \
./generated/clov_float_dslash_achimbdpsi_plus_body_float_float_v1_s1_12 \
./generated/clov_float_dslash_achimbdpsi_plus_body_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_T_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_T_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_T_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_T_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_X_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_X_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_X_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_X_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_18 \
./generated/clov_float_dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_12 \
./generated/clov_float_dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_18 \
./generated/clov_float_dslash_minus_body_float_float_v1_s1_12 \
./generated/clov_float_dslash_minus_body_float_float_v1_s1_18 \
./generated/clov_float_dslash_plus_body_float_float_v1_s1_12 \
./generated/clov_float_dslash_plus_body_float_float_v1_s1_18
endif


if QPHIX_BUILD_TWISTED_MASS
nobase_scalar_include_HEADERS += \
./tm_dslash_scalar_complete_specialization_form.h \
./tm_dslash_scalar_complete_specialization.h \
./generated/tmf_dslash_achimbdpsi_minus_body_double_double_v1_s1_12 \
./generated/tmf_dslash_achimbdpsi_minus_body_double_double_v1_s1_18 \
./generated/tmf_dslash_achimbdpsi_minus_body_float_float_v1_s1_12 \
./generated/tmf_dslash_achimbdpsi_minus_body_float_float_v1_s1_18 \
./generated/tmf_dslash_achimbdpsi_plus_body_double_double_v1_s1_12 \
./generated/tmf_dslash_achimbdpsi_plus_body_double_double_v1_s1_18 \
./generated/tmf_dslash_achimbdpsi_plus_body_float_float_v1_s1_12 \
./generated/tmf_dslash_achimbdpsi_plus_body_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_T_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_T_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_T_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_T_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_T_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_T_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_T_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_T_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_X_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_X_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_X_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_X_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_X_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_X_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_X_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_X_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_18 \
./generated/tmf_dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_12 \
./generated/tmf_dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_18 \
./generated/tmf_dslash_minus_body_double_double_v1_s1_12 \
./generated/tmf_dslash_minus_body_double_double_v1_s1_18 \
./generated/tmf_dslash_minus_body_float_float_v1_s1_12 \
./generated/tmf_dslash_minus_body_float_float_v1_s1_18 \
./generated/tmf_dslash_plus_body_double_double_v1_s1_12 \
./generated/tmf_dslash_plus_body_double_double_v1_s1_18 \
./generated/tmf_dslash_plus_body_float_float_v1_s1_12 \
./generated/tmf_dslash_plus_body_float_float_v1_s1_18
endif


if QPHIX_BUILD_TWISTED_MASS_WITH_CLOVER
nobase_scalar_include_HEADERS += \
./tm_clov_dslash_scalar_complete_specialization_form.h \
./tm_clov_dslash_scalar_complete_specialization.h \
./generated/tmf_clov_double_dslash_achimbdpsi_minus_body_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_achimbdpsi_minus_body_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_achimbdpsi_plus_body_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_achimbdpsi_plus_body_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_T_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_T_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_T_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_T_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_X_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_X_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_X_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_X_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Y_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Y_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Z_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_back_Z_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_T_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_T_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_X_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_X_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Y_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Y_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Z_minus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_face_unpack_from_forw_Z_plus_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_minus_body_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_minus_body_double_double_v1_s1_18 \
./generated/tmf_clov_double_dslash_plus_body_double_double_v1_s1_12 \
./generated/tmf_clov_double_dslash_plus_body_double_double_v1_s1_18 \
./generated/tmf_clov_float_dslash_achimbdpsi_minus_body_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_achimbdpsi_minus_body_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_achimbdpsi_plus_body_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_achimbdpsi_plus_body_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_T_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_T_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_T_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_T_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_X_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_X_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_X_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_X_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Y_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Y_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Z_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_back_Z_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_T_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_T_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_X_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_X_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Y_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Y_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Z_minus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_face_unpack_from_forw_Z_plus_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_minus_body_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_minus_body_float_float_v1_s1_18 \
./generated/tmf_clov_float_dslash_plus_body_float_float_v1_s1_12 \
./generated/tmf_clov_float_dslash_plus_body_float_float_v1_s1_18
endif
